--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,10 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  letter-spacing: 0.1px;
 }
 
 .content {
   flex: 1;
+  padding: 30px 0;
 }
