--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@custom-media --table-viewport (max-width: 1024px);
-
 .container {
   max-width: 1024px;
   margin: 0 auto;
@@ -7,11 +5,18 @@
   min-height: 100vh;
   flex-direction: column;
   letter-spacing: 0.1px;
+  padding: 0 30px;
 }
 
-@media (--table-viewport) {
+@media (--phone) {
   .container {
-    padding: 0 40px;
+    padding: 0 20px;
+  }
+}
+
+@media (--large-desktop) {
+  .container {
+    padding: 0px;
   }
 }
 
