--- a/src/routes/movies/Movie.css
+++ b/src/routes/movies/Movie.css
@@ -1,5 +1,3 @@
-@custom-media --table-viewport (max-width: 1024px);
-
 .movie {
   background-color: #65DBC1;
   width: 146px;
@@ -38,24 +36,35 @@
 .movieContainer {
   display: inline-block;
   margin-left: -1px;
-  margin-right: 25px;
   margin-bottom: 25px;
   max-width: 146px;
+  margin-right: 20px;
 }
 
-a.movieContainer:nth-child(6n){
+a.movieContainer:nth-child(2n){
   margin-right: 0px;
 }
 
-@media (--table-viewport) {
-  a.movieContainer {
-    margin-right: 25px;
+@media (--phone) {
+  a.movieContainer:nth-child(2n){
+    margin-right: 20px;
   }
+}
 
+
+@media (--desktop) {
   a.movieContainer:nth-child(6n){
     margin-right: 0px;
   }
 }
+
+@media (--large-desktop) {
+  a.movieContainer {
+    margin-right: 38px;
+  }
+}
+
+
 
 .movieName {
   overflow: hidden;
