--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -68,7 +68,7 @@
     display: none;
   }
   .menuList {
-    display: block;
+    display: inline;
     position: static;
     background-color: transparent;
   }
@@ -113,4 +113,21 @@
 
 .menuItem:nth-child(7) .menuItemLink:hover, .menuItem:nth-child(7) .menuItemLink.selected {
   border-bottom: 1px solid violet;
+}
+
+.add {
+  border-radius: 3px;
+  padding: 5px 15px;
+  color: white;
+  background-color: #714bca;
+  text-align: center;
+  display: inline-block;
+  margin-left: 25px;
+  font-size: 0.9em;
+  font-weight: 700;
+  letter-spacing: 0.2px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
