--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,6 +11,8 @@
   flex: 1;
   margin-left: 50px;
   text-align: right;
+  display: inline-flex;
+  flex-direction: row-reverse;
 }
 
 .menuList {
@@ -77,6 +79,12 @@
     padding: 0px;
     font-size: 1em;
   }
+  .header .menu {
+    display: block
+  }
+  .add {
+    margin-left: 25px;
+  }
 }
 
 .icon {
@@ -122,7 +130,7 @@
   background-color: #714bca;
   text-align: center;
   display: inline-block;
-  margin-left: 25px;
+  margin-right: 25px;
   font-size: 0.9em;
   font-weight: 700;
   letter-spacing: 0.2px;
