--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,7 +9,6 @@
 
 .header .menu {
   flex: 1;
-  margin-left: 50px;
   text-align: right;
   display: inline-flex;
   flex-direction: row-reverse;
@@ -63,28 +62,6 @@
   flex-direction: column;
   justify-content: space-around;
   padding: 50px 0;
-} 
-
-@media (--desktop) {
-  .menuIcon {
-    display: none;
-  }
-  .menuList {
-    display: inline;
-    position: static;
-    background-color: transparent;
-  }
-  .menuItem {
-    display: inline-block;
-    padding: 0px;
-    font-size: 1em;
-  }
-  .header .menu {
-    display: block
-  }
-  .add {
-    margin-left: 25px;
-  }
 }
 
 .icon {
@@ -137,5 +114,28 @@
 
   &:hover {
     cursor: pointer;
+  }
+}
+
+@media (--desktop) {
+  .menuIcon {
+    display: none;
+  }
+  .menuList {
+    display: inline;
+    position: static;
+    background-color: transparent;
+  }
+  .menuItem {
+    display: inline-block;
+    padding: 0px;
+    font-size: 1em;
+  }
+  .header .menu {
+    display: block
+  }
+  .add {
+    margin-right: 0px;
+    margin-left: 25px;
   }
 }
