--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,9 @@
 }
 
 .banner {
+  position: absolute;
+  top: 0;
+  left: 0;
   background-color: #61c482;
   padding: 5px 0;
   text-align: center;
@@ -33,6 +36,7 @@
   font-weight: 600;
   letter-spacing: 0.2px;
   color: hsla(0,0%,100%,.90);
+  width: 100%;
 }
 
 .banner .link {
