--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -28,7 +28,8 @@
   right: 0;
   bottom: 0;
   height: 100%;
-  background-color: white;
+	background-color: white;
+	margin-right: 20px;
 }
 
 .menuItem {
@@ -38,15 +39,12 @@
   font-size: 1.4em;
 }
 
-.menuItemLink:last-child {
-  margin-right: 0;
-}
-
 .menuItemLink {
   display: inline-block;
-  margin: 0 20px;
+  margin: 0 20px 0 0;
   border-bottom: 1px solid transparent;
-  transition: border-bottom 0.2s ease-in-out;
+	transition: border-bottom 0.2s ease-in-out;
+	text-align: center;
 }
 
 .menuIcon {
@@ -117,6 +115,39 @@
   }
 }
 
+
+.btn {
+	background-color: #f1f5fa;
+	border: 1px solid #f1f5fa;
+	border-radius: 8px;
+	transition: 0.2s ease-in-out;
+	color: #4a4a4a;
+	font-size: 1em;
+	padding: 6px 10px;
+	font-weight: bold;
+	cursor: pointer;
+
+	&:last-child {
+		margin-right: 0;
+	}
+
+	&:hover {
+		background-color: #e0e4ea;
+		border-color: #e0e4ea;
+	}
+
+	&.violet {
+		background-color: #714bca;
+		border-color: #714bca;
+		color: white;
+
+		&:hover {
+			background-color: #4e3290;
+			border-color: #4e3290;
+		}
+	}
+}
+
 @media (--desktop) {
   .menuIcon {
     display: none;
@@ -140,26 +171,4 @@
   }
 }
 
-.btn {
-	background-color: #f1f5fa;
-	border: 1px solid #f1f5fa;
-	border-radius: 8px;
-	margin: 0 8px;
-	transition: 0.2s ease-in-out;
-	color: #4a4a4a;
-	font-size: 1em;
-	padding: 6px 10px;
-	font-weight: bold;
-	cursor: pointer;
-
-	&:last-child {
-		margin-right: 0;
-	}
-
-	&.violet {
-		background-color: #714bca;
-		border-color: #714bca;
-		color: white;
-	}
-}
 
